@@ -1,3 +1,7 @@
+2010-09-23  Bernd Schmidt  <bernds@codesourcery.com>
+
+	* ld-tic6x/pcrel-reloc-local-r-rel-rela.d: New test.
+
 2010-09-23  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
 	* ld-arm/attr-merge-6.attr: Update for Security Extensions.
